# mastodon-twitter-sync

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  DEVELOPMENT.md  Dockerfile  INSTALL.md  README.md  debian.Dockerfile  docker-build  docker-run
.github/workflows/: docker.yml  release.yml  testing.yml
aws_lambda/: Cargo.toml  build_zip.sh
aws_lambda/src/: main.rs
github-cron/: README.md  cache-cleanup.sh
github-cron/.github/workflows/: sync.yml
src/: args.rs  config.rs  delete_favs.rs  delete_statuses.rs  errors.rs  lib.rs  main.rs  mastodon_attach.json  mastodon_status.json  post.rs  registration.rs  sync.rs  tests.rs  thread_replies.rs
