[package]
name = "mastodon-twitter-sync"
version = "1.7.0"
authors = ["Klaus Purer <klaus.purer@protonmail.ch>"]
edition = "2021"

[dependencies]
chrono = ">=0.4.0"
dissolve = ">=0.2.2"
egg-mode = ">=0.16"
egg-mode-text = ">=1.15.0"
env_logger = ">=0.7.1"
anyhow = ">=1"
log = ">=0.4.8"
mime = ">=0.3.13"
regex = ">=0.2.2"
reqwest = ">=0.11"
serde = { version = ">=1.0", features = ["derive"] }
tempfile = ">=3"
toml = ">=0.4.5"
serde_json = ">=1.0.6"
serde_with = ">=2"
structopt = ">=0.2"
tokio = { version = ">=1.0", features = ["rt", "macros", "fs", "time"] }
unicode-segmentation = ">=1.9"

# Dev version of Elefren because media alt text support is not released yet.
# The original Github repository of the project was also deleted, so we have to
# use this mirror.
[dependencies.elefren]
git = "https://github.com/klausi/elefren"
rev = "ffb8c586e5a5e111abf15c8385f60f159033fac1"

[profile.release]
# Enabled to have a smaller binary size.
lto = true
