[package]
name = "mastodon-twitter-sync"
version = "1.8.0"
authors = ["Klaus Purer <klaus.purer@protonmail.ch>"]
description = "Synchronizes posts from Mastodon to Twitter and back."
edition = "2021"

[dependencies]
anyhow = ">=1"
chrono = ">=0.4.0"
clap = { version = ">=3.2.22", features = ["derive"] }
egg-mode = { version = ">=0.16", default-features = false, features = ["rustls_webpki"] }
egg-mode-text = ">=1.15.0"
env_logger = ">=0.7.1"
html-escape = ">=0.2.11"
log = ">=0.4.8"
mime = ">=0.3.13"
regex = ">=0.2.2"
reqwest = { version = ">=0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = ">=1.0", features = ["derive"] }
tempfile = ">=3"
toml = ">=0.4.5"
serde_json = ">=1.0.6"
serde_with = ">=2"
tokio = { version = ">=1.0", features = ["rt", "macros", "fs", "time"] }
unicode-segmentation = ">=1.9"
voca_rs = ">=1.14.0"

# Dev version of Elefren because media alt text support, audio attachments and
# rustls support are not released yet.
# The original Github repository of the project was also deleted, so we have to
# use this mirror.
[dependencies.elefren]
git = "https://github.com/klausi/elefren"
rev = "60759fce4725bb9d78ee5382e780b66796ad07fa"
default-features = false
features = ["rustls-tls"]

[profile.release]
# Enabled to have a smaller binary size.
lto = true
