[package]
name = "mastodon-twitter-sync"
version = "1.9.1"
authors = ["Klaus Purer <klaus.purer@protonmail.ch>"]
description = "Synchronizes posts from Mastodon to Twitter and back."
edition = "2021"

[dependencies]
anyhow = ">=1"
# Switching off default features removes a dependency to the "time" crate that
# contains a potential security issue.
# See https://github.com/time-rs/time/issues/293
chrono = { version = ">=0.4.23", default-features = false, features = ["std"] }
clap = { version = ">=3.2.22", features = ["derive"] }
egg-mode-text = ">=1.15.0"
env_logger = ">=0.7.1"
html-escape = ">=0.2.11"
log = ">=0.4.8"
mime = ">=0.3.13"
regex = ">=0.2.2"
reqwest = { version = ">=0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = ">=1.0", features = ["derive"] }
tempfile = ">=3"
toml = ">=0.4.5"
serde_json = ">=1.0.6"
serde_with = ">=2"
tokio = { version = ">=1.0", features = ["rt", "macros", "fs", "time"] }
unicode-segmentation = ">=1.9"
voca_rs = ">=1.14.0"

# Dev version of Elefren because media alt text support, audio attachments and
# rustls support are not released yet.
# The original Github repository of the project was also deleted, so we have to
# use this mirror.
[dependencies.elefren]
git = "https://github.com/klausi/elefren"
rev = "c41ac8160ddb8f3fbc73e002bff52e953150d3a0"
default-features = false
features = ["rustls-tls"]

# Dev version of egg-mode, see https://github.com/egg-mode-rs/egg-mode/pull/131
[dependencies.egg-mode]
git = "https://github.com/klausi/egg-mode"
rev = "5f46180f2e647533fbec0ec503854fa53375f055"
default-features = false
features = ["rustls_webpki"]

[profile.release]
# Enabled to have a smaller binary size.
lto = true
